--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
         <a href="/">English</a> | <a href="/cn/index.html">中文</a>
     </nav>
     <p>This website showcases my compositions and arrangements.</p>
+    <ul>
+        <li><a href="music-scores/score1.html">View Score 1</a></li>
+        <!-- Additional scores can be listed similarly -->
+    </ul>
 </body>
 </html>
