--- a/music_scores/天路妙音/001垂怜曲.html
+++ b/music_scores/天路妙音/001垂怜曲.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天路妙音001垂怜曲Kyrie</title>
+    <title>Kyrie</title>
 </head>
 <body>
-    <h1>Score Title</h1>
+    <h1>天路妙音001垂怜曲</h1>
     <p>伴奏和弦简谱.</p>
-    <img src="music_scores/天路妙音/score_images/001.jpg" alt="Score Image">
+    <img src="score_images/001.jpg" alt="Score Image">
 <!--     <embed src="path/to/score.pdf" type="application/pdf" width="100%" height="600px">
 </body> -->
 </html>
