--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </nav>
     <p>This website showcases my compositions and arrangements.</p>
     <ul>
-        <li><a href="music_scores/天路妙音/001垂怜曲.html">View Score 1</a></li>
+        <li><a href="music_scores/天路妙音/001垂怜曲.html">天路妙音_001垂怜曲</a></li>
         <!-- Additional scores can be listed similarly -->
     </ul>
 </body>
