--- a/cn/index.html
+++ b/cn/index.html
@@ -11,5 +11,9 @@
         <a href="/">English</a> | <a href="/cn/index.html">中文</a>
     </nav>
     <p>此网站展示了我的作曲和重新配和声。</p>
+        <ul>
+        <li><a href="music_scores/天路妙音/001垂怜曲.html">天路妙音_001垂怜曲</a></li>
+        <!-- Additional scores can be listed similarly -->
+    </ul>
 </body>
 </html>
