--- a/cn/index.html
+++ b/cn/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>欢迎来到我的音乐作品</h1>
     <nav>
-        <a href="/">English</a> | <a href="/cn/index.html">中文</a>
+        <a href="/">English</a> | <a href="cn/index.html">中文</a>
     </nav>
     <p>此网站展示了我为简谱配和声。</p>
     <ul>
