--- a/cn/index.html
+++ b/cn/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>欢迎来到我的音乐作品</h1>
     <nav>
-        <a href="/">English</a> | <a href="cn/index.html">中文</a>
+        <a href="../index.html">English</a> | <a href="index.html">中文</a>
     </nav>
     <p>此网站展示了我为简谱配和声。</p>
     <ul>
-        <li><a href="music_scores/天路妙音/001垂怜曲.html">天路妙音_001垂怜曲</a></li>
+        <li><a href="../music_scores/天路妙音/001垂怜曲.html">天路妙音_001垂怜曲</a></li>
         <!-- Additional scores can be listed similarly -->
     </ul>
 </body>
