--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to My Music Scores</h1>
     <nav>
-        <a href="/">English</a> | <a href="cn/index.html">中文</a>
+        <a href="cn/index.html">中文</a>
     </nav>
     <p>This website showcases my compositions and arrangements.</p>
     <ul>
